# citadels-ts

./: .dockerignore  .gitignore  .prettierignore  .windsurfrules  Dockerfile  FEATURES.md  README.md  TODO.md  app.config.js  deploy.nu  drizzle.config.ts  eslint.config.js  fly.toml  index.html  magick.nu  package-lock.json  package.json  tsconfig.json  vite.config.ts  zellij.kdl
.github/workflows/: build.yml
angular/: README.md  angular.json  package.json  proxy.config.json  tsconfig.app.json  tsconfig.json
angular/src/: app.config.ts  index.html  main.development.ts  main.production.ts  main.ts  styles.css
app/: auth.server.ts  db.server.ts  root.tsx  routeTree.gen.ts  routes.ts  session.ts  trpc.client.ts  trpc.client.tsx
app/db/: index.ts  schema.ts
app/game/: actions.ts  characters.ts  game-actions.ts  game-state.ts  game.ts  lobby.ts  museum.ts  random.ts  roles.ts  types.ts
app/routes/: game.tsx  home.tsx  index.tsx  lobby.tsx  login.tsx  signup.tsx
app/server/: auth.server.ts  auth.ts  context.server.ts  db.server.ts  db.ts  fastify.server.ts  router.server.ts  start.server.ts
app/services/: auth-service.ts
drizzle/: 0000_daffy_black_knight.sql  0001_demonic_zaran.sql
drizzle/meta/: 0000_snapshot.json  (+2 more)
reference/: .dockerignore  .gitattributes  .gitignore  .rgignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  TODO.md  deploy.nu  fly.toml  game.rs  mockup.excalidraw  museum.rs  package-lock.json  package.json  rust-toolchain.toml  steam-assets.txt  tailwind.config.js  tailwind.source.css
reference/citadels/: Cargo.toml
reference/citadels/src/: districts.rs  game.rs  game_actions.rs  lib.rs  lobby.rs
reference/citadels_server/: Cargo.toml
reference/citadels_server/src/: lib.rs  main.rs  templates.rs
reference/citadels_server/src/markup/: base.rs
reference/citadels_server/src/server/: routes.rs  state.rs
reference/citadels_server/src/templates/: filters.rs  game.rs  lobby.rs
reference/citadels_server/src/templates/game/: menu.rs  menus.rs
reference/citadels_server/templates/: base.html
reference/citadels_server/templates/game/: action.html  hand.html  index.html  modal.html  my-stash.html  role-card.html  roles.html
reference/citadels_server/templates/game/menus/: beautify.html  build.html  cardinal.html  diplomat.html  emperor.html  laboratory.html  necropolis.html  reveal-warrant.html  select-role.html  send-blackmail.html  send-warrants.html  warlord.html  wizard.html
reference/citadels_server/templates/lobby/: index.html
reference/citadels_server/templates/lobby/config/: districts.html
src/: routes.ts
volume/: sqlite.db
zellij/: panes.kdl  tabs.kdl
(+152 files in other folders)
