[package]
name = "citadels_server"
edition = "2021"


[dependencies]
citadels = { path = "../citadels/" }
askama = { version = "0.12.1", default-features = false }
axum = { version = "0.7.2", features = ["ws","macros"], default-features = true }
axum-extra = { version = "0.9.0", features = ["cookie-private"], default-features = false }
futures = { version = "0.3.30", default-features = false }
http = { version = "1.0.0", default-features = false }
rand = { version = "0.8.5", default-features = false }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", default-features = false }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
log = "0.4.20"
env_logger = { version = "0.10.1", features = ["color"] }
rand_xoshiro = "0.6.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.195", features = ["derive", "rc"] }
serde_json = "1.0.111"
time = "0.3.31"
dotenv = { version = "0.15.0", optional = true }
axum-core = "0.4.3"
serde_with = "3.5.0"
tracing = { version = "0.1.40", default-features = false }
macros = { path = "../macros"}
reqwest = { version = "0.12.4", features = ["json"], default-features = false }
anyhow = { version = "1.0.83", default-features = true }
maud = { version = "0.26.0", features = ["axum"], default-features = false}
arcstr = { version = "1.2.0", features = ["serde"], default-features = false }
uuid = { version = "1.8.0", features = ["v4"] }
thiserror = "1.0.61"

[features]
dev = []
dotenv = ["dep:dotenv"]
